--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "predev": "node scripts/init.js",
+    "update": "node scripts/init.js",
     "dev": "concurrently \"cd signal-api && npm run dev\" \"cd signal-react && npm run dev\"",
-    "start": "concurrently \"cd signal-api && npm run dev\" \"cd signal-react && npm run dev\""
+    "start": "concurrently \"cd signal-api && npm run dev\" \"cd signal-react && npm run dev\"",
+    "deploy": "concurrently \"cd signal-api && npm run build && npm start\" \"cd signal-react && npm run build && npm start\""
   },
   "author": "",
   "license": "ISC",
